--- a/DiscordRpc/DiscordRpc.csproj
+++ b/DiscordRpc/DiscordRpc.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net35;net40;net45;net46;net47</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.0;netstandard2.0;net35;net40;net45;net451;net452;net46;net461;net47;net471;net472</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
