--- a/DiscordRPC.Sample/DiscordRPC.Sample.csproj
+++ b/DiscordRPC.Sample/DiscordRPC.Sample.csproj
@@ -8,8 +8,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>DiscordRPC.Sample</RootNamespace>
     <AssemblyName>DiscordRPC.Sample</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,6 +48,9 @@
       <Project>{6564a9dc-5fb1-4756-82aa-edbe73859f68}</Project>
       <Name>DiscordRpc</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
