--- a/DiscordRpc/DiscordRpc.csproj
+++ b/DiscordRpc/DiscordRpc.csproj
@@ -1,8 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+		<AssemblyName>DiscordRpc</AssemblyName>
+		<RootNamespace>DiscordRpc</RootNamespace>
     <TargetFrameworks>netcoreapp2.0;netstandard2.0;net35;net40;net45;net451;net452;net46;net461;net47;net471;net472</TargetFrameworks>
+		<OutputType>Library</OutputType>
   </PropertyGroup>
+
+	<PropertyGroup>
+		<Description></Description>
+		<PackageTags>discord discord-rpc discord-ipc dotnet-rpc discord-rich-presence rich-presence discord-activity discord-presence</PackageTags>
+	</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
